--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
 async-generator
-attrs==22.2.0
+attrs>=22.2.0
 bs4
-certifi==2022.12.7
+certifi>=2022.12.7
 cffi
-cryptography==38.0.4
+cryptography>=38.0.4
 h11
 idna
 outcome
 pycparser
 pyOpenSSL
-requests==2.28.1
-selenium==4.7.2
+requests>=2.28.1
+selenium>=4.11.0
 six
 sniffio
 sortedcontainers
 soupsieve
 trio
 trio-websocket
-urllib3==1.26.13
+urllib3>=1.26.13
 wsproto
-chromedriver_autoinstaller
 chardet
