--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,3 @@
-async-generator
-attrs>=22.2.0
-bs4
-certifi>=2022.12.7
-cffi
-cryptography>=38.0.4
-h11
-idna
-outcome
-pycparser
-pyOpenSSL
+beautifulsoup4>=4.12.3
 requests>=2.28.1
 selenium>=4.11.0
-six
-sniffio
-sortedcontainers
-soupsieve
-trio
-trio-websocket
-urllib3>=1.26.13
-wsproto
-chardet
